module-2/gateway-api-grafana.yaml
# kubectl create secret tls tls-grafana-ingress --cert=1d0ceb6b7fc166f1.crt --key=server.key -n monitoring --context=gke_wise-trainer-244916_us-central1_multicloud-gke-cluster
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: monitoring
spec:
  gatewayClassName: nginx # e.g., "nginx"
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "grafana.singhritesh85.com"
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "grafana.singhritesh85.com"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: tls-grafana-ingress
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
  - name: grafana-gateway
    namespace: monitoring
    sectionName: https
  - name: grafana-gateway
    namespace: monitoring
    sectionName: http
  hostnames:
  - "grafana.singhritesh85.com"
  rules:
  - backendRefs:
    - name: kube-prometheus-stack-grafana # Name of the Service created by the Helm chart
      port: 80
